--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -27,9 +27,8 @@
 }
 
 .section {
-    border: 1px solid darkgray;
-    padding: 50px;
-    background-color: white;
+    padding-left: 100px;
+    padding-right: 100px;
 
 }
 
@@ -46,28 +45,92 @@
 }
 
 body {
-    background-color: lavender;
+    background-color: white;
 }
 
-.customHeader {
-    background-image: url(https://lh3.googleusercontent.com/kxcsE4i3IfBHwq7pKQo6m5ucOgFG_FUEX3fnVPZojDWNeZgz5XpwWDks0ykFVvI1xxdUo6gUDA=w1200);
-    background-size: cover;
-    background-position: center;
-    height: 150px;
-    z-index: 0;
-    width: 100%;
-    position: fixed;
+.jumbotron
+{
+    background-image: linear-gradient(to bottom,#3d2b59 0,#6f5499 100%);
+    color: white;
+    padding: 50px;
 }
 
-.container {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 20px;
-    z-index: 1
+
+h1{
+    color: #3d2b59;
 }
+
+h2
+{
+    color: #3d2b59;
+    margin-bottom: 20px;
+}
+
+.form-control{
+    border-color: #3d2b59;
+    outline: 0;
+}
+
+.form-control:focus {
+    border-color: #3d2b59;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(61, 43, 89, .6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(61, 43, 89, .6);
+}
+
+.btn-default{
+    border-color: #3d2b59;
+}
+
+.btn-default:focus,
+.btn-default.focus,
+.btn-default:active:focus,
+.btn-default.active:focus,
+.btn-default:active.focus,
+.btn-default.active.focus  {
+    color: white;
+    background-color: #3d2b59;
+    border: 1px solid #251a36;
+    outline: none;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(61, 43, 89, .6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(61, 43, 89, .6);
+}
+.btn-default:hover,
+.btn-default.active,
+.btn-default:active,
+.btn-default:active:hover,
+.btn-default.active:hover
+{
+    color: white;
+    background-color: #3d2b59;
+    border: 1px solid #251a36;
+    outline: none;
+}
+
+.btn-primary{
+    border-color: #3d2b59;
+    background-color: #3d2b59;
+}
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary.focus,
+.btn-primary.active,
+.btn-primary:active,
+.btn-primary:active:hover,
+.btn-primary.active:hover,
+.btn-primary:active:focus,
+.btn-primary.active:focus,
+.btn-primary:active.focus,
+.btn-primary.active.focus{
+    color: white;
+    background-color: #361f4c;
+    border: 1px solid #251a36;
+    outline: none;
+}
+
 
 .form-horizontal .form-group {
-    margin-left: 0px;
-    margin-right: 0px;
+
+    margin-left: 0;
+    margin-right: 0;
 }
